
* 2013-05-07 - thorben.betten@open-xchange.com

 - Fix for bug 26382: Listen to file storage events, too
 - Fix for bug 26346: Detect a canceled OAuth authentication process
 - Fix for bug 26265: Add more logging properties when trying to output a message
 - Preparation to fix bug 26392: Maintain contact's image data on convert request

* 2013-05-06 - thorben.betten@open-xchange.com

 - Fix for bug 24786: Set appropriate error category to display more meaningful error message

* 2013-05-05 - thorben.betten@open-xchange.com

 - Fix for bug 26105: Add proper context identifier to distributed event

* 2013-05-04 - thorben.betten@open-xchange.com

 - Fix for bug 26359: Deal with possibly absent CommonEvent instance
 - Fix for bug 26360: Moved source bundles from 'lib' to its own 'source' directory and changed MANIFEST.MF + .classpath files accordingly

* 2013-05-03 - marcus.klein@open-xchange.com

 - Fix for bug 26323: Deal with multi-threading problem if OSGi cache service gets unavailable.

* 2013-05-03 - thorben.betten@open-xchange.com

 - Fix for bug 26341: Don't stick to certain values, but only check existence of associated option
 - Fix for bug 26305: Obtain group names directly from JCS cache
 - Fix for bug 26266: Ensure user/context information is prepended to log message whenever available
 - Fix for bug 26370: Handle unexpected UnknownHostException gracefully
 - Fix for bug 26373: Sanitize on "delivery=view", too
 - Fix for bug 26362: Honor new "delivery" parameter

* 2013-05-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 25672: Don't delete already existing delete exceptions   

* 2013-05-02 - thorben.betten@open-xchange.com

 - Fix for bug 26300: Deal with absent session when checking request-count boundary
 - Fix for bug 26267: Use lenient Cookie parsing policy
 - Fix for bug 26305: Use safe hash calculation to avoid hash collisions
 - Fix for bug 26054: Adapted logging to output USR-0010 error code as DEBUG only