@@ -8,6 +8,7 @@
  - Fix for bug 26346: Detect a canceled OAuth authentication process
  - Fix for bug 26265: Add more logging properties when trying to output a message
  - Preparation to fix bug 26392: Maintain contact's image data on convert request
+ - Fix for bug 25982: Accept context name/identifier as a valid tag name that applies only to associated context
 
 * 2013-05-06 - thorben.betten@open-xchange.com
 
